# mcx-poker

./: README.md  pyproject.toml
doc/: high-level-design.md  implementation-decisions.md  prompt.md  proposal.md
doc/.obsidian/: workspace.json
doc/detailed-design/: README.md
doc/detailed-design/data/: temporary-hand-event-log.md
doc/detailed-design/delivery/: backend-api.md  frontend-poker-table-ui.md  websocket-gateway.md
doc/detailed-design/domain/: observation-system.md  player-controller.md  table-manager.md
doc/detailed-design/engine/: action-model.md  action-validator.md  game-loop.md  pokerkit-adapter.md
doc/detailed-design/extensions/: future-extension-interfaces.md
doc/tasks/: action-model.md  action-validator.md  backend-api.md  frontend-poker-table-ui.md  future-extension-interfaces.md  game-loop.md  observation-system.md  player-controller.md  pokerkit-adapter.md  progress.md  table-manager.md  temporary-hand-event-log.md  websocket-gateway.md
doc/人话/: README.md  人话项目导览.md
doc/人话/mcx_poker/: __init__.py.md
src/mcx_poker/: __init__.py
src/mcx_poker/delivery/: __init__.py  api.py  local.py  websocket.py
src/mcx_poker/engine/: __init__.py  actions.py  game_loop.py  pokerkit_adapter.py  validator.py
src/mcx_poker/history/: events.py  (+1 more)
tests/: test_action_model.py  test_action_validator.py  test_delivery_api.py  test_extension_interfaces.py  test_frontend_static.py  test_game_loop.py  test_hand_event_log.py  test_observation_builder.py  test_player_controllers.py  test_pokerkit_adapter.py  test_table_manager.py  test_websocket_gateway.py
(+30 files in other folders)
