[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcx-poker"
version = "0.1.0"
description = "Poker table platform layer built on PokerKit."
requires-python = ">=3.11"
dependencies = [
    "pokerkit==0.7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
