[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcx-poker"
version = "0.1.0"
description = "Poker table platform layer built on PokerKit."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "pokerkit==0.7.4",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "mypy>=1.10,<2",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.6,<1",
]

[project.scripts]
mcx-poker = "mcx_poker.delivery.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcx_poker = ["delivery/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
